--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Build job
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     outputs:
       Version: ${{ steps.gitversion.outputs.SemVer }}
       CommitsSinceVersionSource: ${{ steps.gitversion.outputs.CommitsSinceVersionSource }}
@@ -44,7 +44,7 @@ jobs:
 
   release: 
     name: Release job
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: 
     - build
     if: github.ref == 'refs/heads/main'
