Renamed misnamed project

--- a/src/DotnetCensus.Tests/DotnetCensus.Tests.csproj
+++ b/src/DotnetCensus.Tests/DotnetCensus.Tests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DotnetCensus\DotNetCensus.csproj" />
+    <ProjectReference Include="..\DotnetCensus.Core\DotNetCensus.Core.csproj" />
   </ItemGroup>
 
 </Project>
