Fix to casing of project names

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -33,14 +33,14 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: .NET test
-      run: dotnet test src/DotnetCensus.Tests/DotnetCensus.Tests.csproj -c Release
+      run: dotnet test src/DotNetCensus.Tests/DotNetCensus.Tests.csproj -c Release
     - name: .NET publish
-      run: dotnet publish src/DotnetCensus/DotnetCensus.csproj -c Release -p:Version='${{ steps.gitversion.outputs.SemVer }}'
+      run: dotnet publish src/DotNetCensus/DotNetCensus.csproj -c Release -p:Version='${{ steps.gitversion.outputs.SemVer }}'
     - name: Upload package back to GitHub
       uses: actions/upload-artifact@v3
       with:
         name: drop
-        path: src/DotnetCensus/bin/Release
+        path: src/DotNetCensus/bin/Release
 
   release: 
     name: Release job
