--- a/src/DotnetCensus.Tests/DotnetCensus.Tests.csproj
+++ b/src/DotnetCensus.Tests/DotnetCensus.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DotnetCensus.Core\DotNetCensus.Core.csproj" />
+    <ProjectReference Include="..\DotNetCensus.Core\DotNetCensus.Core.csproj" />
   </ItemGroup>
 
 </Project>
