--- a/src/DotNetCensus.Tests/DotNetCensus.Tests.csproj
+++ b/src/DotNetCensus.Tests/DotNetCensus.Tests.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DotNetCensus.Core\DotNetCensus.Core.csproj" />
+    <ProjectReference Include="..\DotNetCensus\DotNetCensus.csproj" />
   </ItemGroup>
 
 </Project>
