--- a/src/DotNetCensus/DotNetCensus.csproj
+++ b/src/DotNetCensus/DotNetCensus.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DotnetCensus.Core\DotNetCensus.Core.csproj" />
+  </ItemGroup>
+
 </Project>
