--- a/src/DotNetCensus/DotNetCensus.csproj
+++ b/src/DotNetCensus/DotNetCensus.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DotnetCensus.Core\DotNetCensus.Core.csproj" />
+    <ProjectReference Include="..\DotNetCensus.Core\DotNetCensus.Core.csproj" />
   </ItemGroup>
 
 </Project>
