--- a/samples/Sample.NetCore1.0.ConsoleApp/project.json
+++ b/samples/Sample.NetCore1.0.ConsoleApp/project.json
@@ -1,19 +1,19 @@
 {
-  version 1.0.0-,
-  buildOptions {
-    debugType portable,
-    emitEntryPoint true
+  "version": "1.0.0-*",
+  "buildOptions": {
+    "debugType": "portable",
+    "emitEntryPoint": true
   },
-  dependencies {},
-  frameworks {
-    netcoreapp1.0 {
-      dependencies {
-        Microsoft.NETCore.App {
-          type platform,
-          version 1.0.0
+  "dependencies": {},
+  "frameworks": {
+    "netcoreapp1.0": {
+      "dependencies": {
+        "Microsoft.NETCore.App": {
+          "type": "platform",
+          "version": "1.0.0"
         }
       },
-      imports dnxcore50
+      "imports": "dnxcore50"
     }
   }
 }
