--- a/src/DotNetCensus/DotNetCensus.csproj
+++ b/src/DotNetCensus/DotNetCensus.csproj
@@ -20,6 +20,7 @@
 	<ItemGroup>
 		<PackageReference Include="CommandLineParser" Version="2.9.1" />
 		<PackageReference Include="ConsoleTables" Version="2.4.2" />
+		<PackageReference Include="System.Text.Json" Version="6.0.5" />
 	</ItemGroup>
 
 	<ItemGroup>
