--- a/src/DotNetCensus.Tests/DotNetCensus.Tests.csproj
+++ b/src/DotNetCensus.Tests/DotNetCensus.Tests.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
+    <PackageReference Include="Spectre.Console.Testing" Version="0.44.0" />
   </ItemGroup>
 
   <ItemGroup>
