--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -70,7 +70,7 @@ jobs:
     #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
 
     - run: |
-        dotnet build src/DotNetCensus/DotNetCensus.csproj 
+        dotnet build src/DotNetCensus.sln
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
