--- a/src/DotNetCensus.Tests/DotNetCensus.Tests.csproj
+++ b/src/DotNetCensus.Tests/DotNetCensus.Tests.csproj
@@ -6,9 +6,12 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+
+    <UserSecretsId>b57da4f0-05f1-4401-9b71-546bd5c69914</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
@@ -19,6 +22,12 @@
   <ItemGroup>
     <ProjectReference Include="..\DotNetCensus.Core\DotNetCensus.Core.csproj" />
     <ProjectReference Include="..\DotNetCensus\DotNetCensus.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
