--- a/src/DotNetCensus.Core/DotNetCensus.Core.csproj
+++ b/src/DotNetCensus.Core/DotNetCensus.Core.csproj
@@ -4,6 +4,12 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageProjectUrl>https://github.com/samsmithnz/DotNetCensus.Core</PackageProjectUrl>
+		<PackageDescription>A library to find and count .NET versions</PackageDescription>
+		<PackageTags>.NET;dotnet;count;census;.NET Framework;.NET Standard;.NET Core;.NET;c#;VB.NET;VB6;</PackageTags>
+		<Authors>SamSmithNZ</Authors>
 	</PropertyGroup>
 
 	<ItemGroup>
