--- a/src/DotNetCensus.Core/DotNetCensus.Core.csproj
+++ b/src/DotNetCensus.Core/DotNetCensus.Core.csproj
@@ -11,6 +11,7 @@
 		<PackageDescription>A library to find and count .NET versions</PackageDescription>
 		<PackageTags>.NET;dotnet;count;census;.NET Framework;.NET Standard;.NET Core;.NET;c#;VB.NET;VB6;</PackageTags>
 		<Authors>SamSmithNZ</Authors>
+		<PackageId>DotNetCensus.Core</PackageId>
 	</PropertyGroup>
 
 	<ItemGroup>
