--- a/src/DotNetCensus.Core/DotNetCensus.Core.csproj
+++ b/src/DotNetCensus.Core/DotNetCensus.Core.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<PackageOutputPath>./nupkg</PackageOutputPath>
+		<IsPackable>true</IsPackable>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/samsmithnz/DotNetCensus.Core</PackageProjectUrl>
