--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,6 +45,7 @@ jobs:
         CollectCoverage: true
         CoverletOutput: TestResults/
         CoverletOutputFormat: lcov
+    - run: Get-ChildItem -Path TestResults -Filter *.* -Recurse -ErrorAction SilentlyContinue -Force
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
