--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -40,11 +40,7 @@ jobs:
         AppSettings.GitHubClientId: "${{ secrets.GitHubClientId }}"
         AppSettings.GitHubClientSecret: "${{ secrets.GitHubClientSecret }}" 
     - name: .NET test
-      run: dotnet test src/DotNetCensus.Tests/DotNetCensus.Tests.csproj -c Debug  /e:CollectCoverage=true /e:CoverletOutput=TestResults/ /e:CoverletOutputFormat=lcov
-    - run: |
-        cd/${{ github.workspace }}/TestResults
-        ls 
-        #Get-ChildItem -Path TestResults -Filter *.* -Recurse -ErrorAction SilentlyContinue -Force
+      run: dotnet test src/DotNetCensus.Tests/DotNetCensus.Tests.csproj -c Debug -e:CollectCoverage=true -e:CoverletOutput=TestResults/ -e:CoverletOutputFormat=lcov
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
