--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -68,6 +68,7 @@ jobs:
   sonarCloud:
     name: Run SonarCloud analysis
     runs-on: windows-latest
+    needs: build
     steps:
       - name: Set up JDK 11
         uses: actions/setup-java@v1
