Updated correct path to SonarCloud

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -101,7 +101,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"samsmithnz_SamSmithNZ.com" /o:"samsmithnz-github" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"samsmithnz_DotNetCensus.com" /o:"samsmithnz-github" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet build src/DotNetCensus/DotNetCensus.csproj
           dotnet build src/DotNetCensus.Core/DotNetCensus.Core.csproj
           dotnet build src/DotNetCensus.Tests/DotNetCensus.Tests.csproj
