--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -62,51 +62,20 @@ jobs:
         name: nugetCorePackage
         path: src/DotNetCensus.Core/nupkg
 
+
   sonarCloud:
     name: Run SonarCloud analysis
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' 
     steps:
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - name: Run Sonarcloud test
+        uses: samsmithnz/SamsDotNetSonarCloudAction@1.0.5
         with:
-          java-version: 1.11
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Install .NET 7 SDK
-        uses: actions/setup-dotnet@v3.0.3
-        with:
-          dotnet-version: 7.0.x
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v3
-        with:
-          path: ~\sonar\cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache SonarCloud scanner
-        id: cache-sonar-scanner
-        uses: actions/cache@v3
-        with:
-          path: .\.sonar\scanner
-          key: ${{ runner.os }}-sonar-scanner
-          restore-keys: ${{ runner.os }}-sonar-scanner
-      - name: Install SonarCloud scanner
-        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-        shell: powershell
-        run: |
-          New-Item -Path .\.sonar\scanner -ItemType Directory
-          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
-      - name: Build and analyze
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        shell: powershell
-        run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"samsmithnz_DotNetCensus" /o:"samsmithnz-github" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet build src/DotNetCensus/DotNetCensus.csproj
-          dotnet build src/DotNetCensus.Core/DotNetCensus.Core.csproj
-          dotnet build src/DotNetCensus.Tests/DotNetCensus.Tests.csproj
-          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+          projects: 'src/DotNetCensus/DotNetCensus.csproj,src/DotNetCensus.Core/DotNetCensus.Core.csproj,src/DotNetCensus.Tests/DotNetCensus.Tests.csproj'
+          dotnet-version: '7.0.x'
+          sonarcloud-organization: 'samsmithnz-github'
+          sonarcloud-project: 'samsmithnz_DotNetCensus'
+          SONAR_TOKEN: '${{ secrets.SONAR_TOKEN }}'
 
 
   release: 
