--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -47,11 +47,13 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: ${{ github.workspace }}/TestResults/coverage.info
+    - name: publish Linux version 
+      run: dotnet publish src/DotNetCensus/DotNetCensus.csproj -c Release --runtime linux-x64 --self-contained
     - name: Upload package back to GitHub
       uses: actions/upload-artifact@v3
       with:
         name: nugetToolPackage_Linux
-        path: src/DotNetCensus/nupkg
+        path: src/DotNetCensus/bin/Debug/net7.0/linux-x64/publish/ #src/DotNetCensus/nupkg 
 
 
   pack:
