--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 jobs:
   build:
-    name: Build job
+    name: Build Linux job
     runs-on: ubuntu-latest
     outputs:
       Version: ${{ steps.gitversion.outputs.SemVer }}
@@ -53,7 +53,41 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: nugetToolPackage_Linux
-        path: src/DotNetCensus/bin/Debug/net7.0/linux-x64/publish/ #src/DotNetCensus/nupkg 
+        path: src/DotNetCensus/bin/Release/net7.0/linux-x64/publish/ #src/DotNetCensus/nupkg 
+
+
+  buildWindows:
+    name: Build Windows job
+    runs-on: windows-latest
+    outputs:
+      Version: ${{ steps.gitversion.outputs.SemVer }}
+      CommitsSinceVersionSource: ${{ steps.gitversion.outputs.CommitsSinceVersionSource }}
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - name: Setup GitVersion
+      uses: gittools/actions/gitversion/setup@v0.10.2
+      with:
+        versionSpec: 5.x
+    - name: Determine Version
+      id: gitversion
+      uses: gittools/actions/gitversion/execute@v0.10.2
+    - name: Display GitVersion outputs
+      run: |
+        echo "Version: ${{ steps.gitversion.outputs.SemVer }}"
+        echo "CommitsSinceVersionSource: ${{ steps.gitversion.outputs.CommitsSinceVersionSource }}"
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 7.0.x
+    - name: publish Windows version 
+      run: dotnet publish src/DotNetCensus/DotNetCensus.csproj -c Release --runtime windows-x64 --self-contained
+    - name: Upload package back to GitHub
+      uses: actions/upload-artifact@v3
+      with:
+        name: nugetToolPackage_Windows
+        path: src/DotNetCensus/bin/Release/net7.0/windows-x64/publish/ #src/DotNetCensus/nupkg 
 
 
   pack:
@@ -62,6 +96,7 @@ jobs:
     #if: github.ref == 'refs/heads/main'
     needs: 
     - build
+    - buildWindows
     steps:
     - name: Download artifact from build job
       uses: actions/download-artifact@v3
