--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -82,12 +82,12 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: publish Windows version 
-      run: dotnet publish src/DotNetCensus/DotNetCensus.csproj -c Release --runtime windows-x64 --self-contained
+      run: dotnet publish src/DotNetCensus/DotNetCensus.csproj -c Release --runtime win-x64 --self-contained
     - name: Upload package back to GitHub
       uses: actions/upload-artifact@v3
       with:
         name: nugetToolPackage_Windows
-        path: src/DotNetCensus/bin/Release/net7.0/windows-x64/publish/ #src/DotNetCensus/nupkg 
+        path: src/DotNetCensus/bin/Release/net7.0/win-x64/publish/ #src/DotNetCensus/nupkg 
 
 
   pack:
