--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
 		"args": { 
 			// Update 'VARIANT' to pick a .NET Core version: 3.1, 6.0
 			// Append -bullseye or -focal to pin to an OS version.
-			"VARIANT": "6.0-bullseye",
+			"VARIANT": "7.0-bullseye",
 			// Options
 			"NODE_VERSION": "none"
 		}
@@ -22,8 +22,7 @@
 				"ms-dotnettools.csharp",
 				"formulahendry.dotnet-test-explorer",
 				"hbenl.vscode-test-explorer",
-				"github.copilot-nightly",
-				"github.copilot"
+				"github.copilot-nightly"
 			]
 		}
 	},
