--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -66,7 +66,7 @@ jobs:
   sonarCloud:
     name: Run SonarCloud analysis
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' 
+    if: false && github.ref == 'refs/heads/main' 
     steps:
       - name: Run Sonarcloud test
         uses: samsmithnz/SamsDotNetSonarCloudAction@v2.1
@@ -83,7 +83,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: 
     - build
-    - sonarCloud
+    # - sonarCloud
     if: github.ref == 'refs/heads/main'
     steps:
     - name: Download artifact from build job
